@@ -213,6 +213,15 @@
               <span metal:use-macro="here/widgets/field/macros/view" />
             </td>
           </tr>
+          <tr valign="top">
+            <td tal:define="field python:here.getField('configGroups')">
+              <span metal:use-macro="here/widgets/field/macros/view" />
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+          </tr>
 
         </table>
       </fieldset>
