@@ -17,7 +17,11 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Specify in MeetingConfig.mailItemEvents and MeetingConfig.mailMeetingEvents "WF transition" events title
   clearly that it is "WF transitions" related events as it can be similar to specific mail events
 - Make it easy to hide/show several extra fields using the MeetingItem budget related JS on the view and edit
+- Added possibility to group MeetingConfigs together in the configuration.  This will generate a drop down menu
+  in the site header instead displaying MeetingConfigs next to each other.  This is useful when managing several
+  MeetingConfigs or to group MeetingConfigs by context
 - portal_tabs to access a MeetingConfig is now generated, we do not add an action in portal_tabs anymore
+- 
 - Display the title of current MeetingConfig in the portlet_plonemeeting header instead laconic term 'Manage'
   so it recalls where we are.  It is necessary when using groups of configs
 
